apps/development/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  generation: 1
  name: nginx-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: kub3.dev
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kub3.dev
    secretName: le-kub3-dev-cert-tls
